# nengine_cpp

./: CMakeLists.txt  README.md  RenderQuery.hpp  TODO  proj
.cache/clangd/index/: Algebra.hpp.141D6EE8948A0381.idx  BaseFrames.cpp.2C95F5F5F99CC598.idx  BaseFrames.hpp.3941611AFC724B36.idx  ComputeDevice.cpp.AD88690040143B57.idx  ComputeDevice.hpp.6F15B4F581059B45.idx  DeviceBuffer.hpp.0BE2D1FEA4135AE6.idx  DeviceBufferFrame.hpp.4215F5310D2C8F94.idx  DeviceImage.hpp.CA3431A6238114AD.idx  DeviceShaderModule.hpp.F9750A34EDC790D2.idx  DeviceVertexBuffer.hpp.28FE8A786F5A0943.idx  Graphics.hpp.FB89E7FAAE3B0029.idx  HostImage.hpp.BE748A856BB71707.idx  LLRenderer.cpp.DC67D8B84AB4FEF8.idx  LLRenderer.hpp.DF51E7B3F15DB19C.idx  NAlgebra.cpp.1A44F8F1D26688FA.idx  NAlgebra.hpp.A048FF83F13D757A.idx  NObject.cpp.8CCAEDB81EB1BC91.idx  NObject.hpp.C36E11E1E222C579.idx  PixelSubstances.hpp.C08FE236381BBF67.idx  RenderPipeline.hpp.CFD42C83CBF9F126.idx  RenderQuery.hpp.B64D60873A36EC2A.idx  RenderScene.hpp.023ACCA32BD1517B.idx  Renderer.cpp.7B78F2C453D3910F.idx  Renderer.hpp.A8009023AA32EA42.idx  Scene.hpp.1A2C118E4FFBB7BB.idx  SceneResources.hpp.04AEB050575E8D22.idx  Simulation.cpp.D257AE3B4F14B5AD.idx  Simulation.hpp.7B090963B6882C3B.idx  SimulationFrame.cpp.7B5AFF2EC928A3E9.idx  SimulationFrame.hpp.F8559061F6351EB6.idx  Simulations.cpp.7D99EEDD9E5EB4E2.idx  Simulations.hpp.345B4AC3F967C9EC.idx  SpaceNode.cpp.683EA03E59F9CECE.idx  SpaceNode.hpp.EB816B4C1A427B1C.idx  SpaceTree.cpp.0A54B560DCD713A0.idx  SpaceTree.hpp.3B7D65BB7E887451.idx  SwapChain.hpp.4609E4589A1C072A.idx  Visor.cpp.0486DFBD0775A058.idx  Visor.hpp.90A14083C05BBCAD.idx  VulkanAPI.cpp.A59ECFDD785D932B.idx  (+12 more)
src/: .clangd  Makefile  main.cpp  main_test
src/Core/: BaseFrames.cpp  BaseFrames.hpp  Graphics.cpp  Graphics.hpp  LLRenderer.cpp  LLRenderer.hpp  NAlgebra.cpp  NAlgebra.hpp  NObject.cpp  NObject.hpp  RenderQuery.hpp  Renderer.cpp  Renderer.hpp  Scene.hpp  Simulation.cpp  Simulation.hpp  SimulationFrame.cpp  SimulationFrame.hpp  Simulations.cpp  Simulations.hpp  SpaceNode.cpp  SpaceNode.hpp  SpaceTree.cpp  SpaceTree.hpp  Universes.cpp  Universes.hpp  Visor.cpp  Visor.hpp  VulkanAPI.cpp  VulkanAPI.hpp  VulkanLLRenderer.cpp  VulkanLLRenderer.hpp  util.cpp  util.hpp
src/Core/generators/: PixelSubstances.hpp
src/Core/graphics/: HostImage.hpp  RenderScene.hpp  SceneResources.hpp  resources.hpp
src/Core/os/: fs.cpp  (+1 more)
src/shaders/: shader.frag  shader.vert
src/tmp/: test_compile_commands.json.test
(+61 files in other folders)
